--- a/kunjungan.html
+++ b/kunjungan.html
@@ -136,19 +136,19 @@
         <a href="#" class="btn-float btn-top" id="btnBackToTop" onclick="window.scrollTo(0,0); return false;"><i class="fas fa-arrow-up"></i></a>
     </div>
 
-<div class="modal fade" id="previewModal" tabindex="-1" aria-hidden="true">
-    <div class="modal-dialog modal-xl modal-dialog-centered">
-        <div class="modal-content rounded-4 border-0 shadow">
-            <div class="modal-header">
-                <h5 class="modal-title fw-bold" id="previewTitle">Preview Dokumen</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body p-0">
-                <iframe id="previewFrame" src="" style="width: 100%; height: 80vh; border: none; border-radius: 0 0 15px 15px;"></iframe>
+    <div class="modal fade" id="docPreviewModal" tabindex="-1" aria-hidden="true" style="z-index: 9999;">
+        <div class="modal-dialog modal-xl modal-dialog-centered">
+            <div class="modal-content border-0 shadow-lg">
+                <div class="modal-header bg-dark text-white">
+                    <h5 class="modal-title" id="docModalTitle">Preview Dokumen</h5>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body p-0" style="height: 85vh;">
+                    <iframe id="docFrame" src="" width="100%" height="100%" frameborder="0"></iframe>
+                </div>
             </div>
         </div>
     </div>
-</div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
