--- a/index.html
+++ b/index.html
@@ -421,8 +421,14 @@
             <div class="col-lg-4 mb-4" data-aos="fade-up" data-aos-delay="300">
                 <h6 class="fw-bold text-uppercase mb-3 border-bottom border-warning pb-2 d-inline-block">LOKASI KAMI</h6>
                 <div class="ratio ratio-16x9 shadow-sm rounded-4 overflow-hidden border border-secondary">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3954.269342790938!2d109.9113643735773!3d-7.761214076973955!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7a935427f7f32b%3A0xc069cc882415d487!2sLPKA%20Kelas%20I%20Kutoarjo!5e0!3m2!1sid!2sid!4v1708412345678" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-                </div>
+    <iframe 
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3954.143494799002!2d109.91136457484306!3d-7.721323392296839!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7a839dc7b987d7%3A0x9b589500a2d80842!2sLPKA%20Klas%20I%20Kutoarjo!5e0!3m2!1sid!2sid!4v1715600000000!5m2!1sid!2sid" 
+        style="border:0;" 
+        allowfullscreen="" 
+        loading="lazy" 
+        referrerpolicy="no-referrer-when-downgrade">
+    </iframe>
+</div>
             </div>
         </div>
 
