--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="desain.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.2.0/dist/chartjs-plugin-datalabels.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <meta name="description" content="Website Resmi LPKA Kelas I Kutoarjo, Kementerian Imigrasi dan Pemasyarakatan. Informasi layanan kunjungan, berita terkini, dan profil instansi.">
 <meta name="keywords" content="LPKA Kutoarjo, Lembaga Pembinaan Khusus Anak, Kemenimipas, Pemasyarakatan, Berita LPKA, Purworejo">
 <meta name="author" content="Humas LPKA Kelas I Kutoarjo">
@@ -341,9 +340,53 @@
                                             <i class="fas fa-chart-line me-1"></i> Lihat Capaian Kinerja
                                         </a>
                                     </div>
-                                </div>
+                                 </div>
                             </div>
                         </div>
+<div class="row g-2 mb-3 mt-2">
+    <div class="col-12">
+        <h5 class="fw-bold text-primary text-center mb-2" style="font-size: 16px;">Rata-Rata Capaian Kinerja 5 Tahun Terakhir</h5>
+    </div>
+    <div class="col-md-4">
+        <div class="card border-0 shadow-sm p-2 text-center" style="border-radius: 12px; background: white;">
+            <h6 class="fw-bold small text-muted text-uppercase mb-2" style="font-size: 10px; letter-spacing: 1px;">Penyerapan</h6>
+            <div style="height: 120px; position: relative;">
+                <canvas id="piePenyerapan"></canvas>
+                <div id="vPersenPenyerapan" class="pie-center-label" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); font-weight: bold; font-size: 15px;"></div>
+            </div>
+            <div class="progress mt-1" style="height: 6px; border-radius: 8px;">
+                <div id="barPenyerapan" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"></div>
+            </div>
+            <small id="infoTahunP" class="text-muted" style="font-size: 9px;"></small>
+        </div>
+    </div>
+    <div class="col-md-4">
+        <div class="card border-0 shadow-sm p-2 text-center" style="border-radius: 12px; background: white;">
+            <h6 class="fw-bold small text-muted text-uppercase mb-2" style="font-size: 10px; letter-spacing: 1px;">IKPA</h6>
+            <div style="height: 120px; position: relative;">
+                <canvas id="pieIKPA"></canvas>
+                <div id="vPersenIKPA" class="pie-center-label" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); font-weight: bold; font-size: 15px;"></div>
+            </div>
+            <div class="progress mt-1" style="height: 6px; border-radius: 8px;">
+                <div id="barIKPA" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"></div>
+            </div>
+            <small id="infoTahunI" class="text-muted" style="font-size: 9px;"></small>
+        </div>
+    </div>
+    <div class="col-md-4">
+        <div class="card border-0 shadow-sm p-2 text-center" style="border-radius: 12px; background: white;">
+            <h6 class="fw-bold small text-muted text-uppercase mb-2" style="font-size: 10px; letter-spacing: 1px;">SMART</h6>
+            <div style="height: 120px; position: relative;">
+                <canvas id="pieSMART"></canvas>
+                <div id="vPersenSMART" class="pie-center-label" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); font-weight: bold; font-size: 15px;"></div>
+            </div>
+            <div class="progress mt-1" style="height: 6px; border-radius: 8px;">
+                <div id="barSMART" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"></div>
+            </div>
+            <small id="infoTahunS" class="text-muted" style="font-size: 9px;"></small>
+        </div>
+    </div>
+</div>
                     </div>
 
                     <div class="sidebar-widget" id="video-section" data-aos="fade-left" data-aos-delay="200">
