--- a/index.html
+++ b/index.html
@@ -345,11 +345,11 @@
                         </div>
 <div class="row g-2 mb-3 mt-2">
     <div class="col-12">
-        <h5 class="fw-bold text-primary text-center mb-2" style="font-size: 16px;">Rata-Rata Capaian Kinerja 5 Tahun Terakhir</h5>
+        <h5 class="fw-bold text-primary text-center mb-2" style="font-size: 16px;">Rata-Rata Capaian Kinerja Anggaran 5 Tahun Terakhir</h5>
     </div>
     <div class="col-md-4">
         <div class="card border-0 shadow-sm p-2 text-center" style="border-radius: 12px; background: white;">
-            <h6 class="fw-bold small text-muted text-uppercase mb-2" style="font-size: 10px; letter-spacing: 1px;">Penyerapan</h6>
+            <h6 class="fw-bold small text-muted text-uppercase mb-2" style="font-size: 10px; letter-spacing: 1px;">Penyerapan Anggaran</h6>
             <div style="height: 120px; position: relative;">
                 <canvas id="piePenyerapan"></canvas>
                 <div id="vPersenPenyerapan" class="pie-center-label" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); font-weight: bold; font-size: 15px;"></div>
